--- a/views/user.hbs
+++ b/views/user.hbs
@@ -19,14 +19,7 @@
   </style>
 </head>
 <body>
-  <ul>
-    {{#each users as |user|}}
-    <div>
-        <img src="/profilepics/{{user.username}}_sm.jpg" alt="">
-        <a href="/{{user.username}}">{{user.name.full}}</a>
-    </div>
-    {{/each}}
-  </ul>
-  
+    <h1>{{username}}</h1>
+    <img src="/profilepics/{{username}}_lg.jpg" alt="">
 </body>
 </html>
